<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainMenuFragment"
    tools:ignore="ContentDescription">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="@dimen/main_menu_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/buttonLoadProject"
                android:layout_width="@dimen/main_menu_icon_size"
                android:layout_height="@dimen/main_menu_icon_size"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitStart"
                android:src="@drawable/ic_icon_load" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_load"
                android:textAlignment="center"
                android:textSize="@dimen/main_menu_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/main_menu_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/buttonSaveProject"
                android:layout_width="@dimen/main_menu_icon_size"
                android:layout_height="@dimen/main_menu_icon_size"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitStart"
                android:src="@drawable/ic_icon_save" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_save"
                android:textAlignment="center"
                android:textSize="@dimen/main_menu_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/main_menu_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/buttonConnectDevice"
                android:layout_width="@dimen/main_menu_icon_size"
                android:layout_height="@dimen/main_menu_icon_size"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitStart"
                android:src="@drawable/ic_icon_disconnected" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_connect"
                android:textAlignment="center"
                android:textSize="@dimen/main_menu_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/main_menu_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/buttonJoystick"
                android:layout_width="@dimen/main_menu_icon_size"
                android:layout_height="@dimen/main_menu_icon_size"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitStart"
                android:src="@drawable/ic_circle_joystick" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_manual"
                android:textAlignment="center"
                android:textSize="@dimen/main_menu_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/main_menu_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/buttonViewCode"
                android:layout_width="@dimen/main_menu_icon_size"
                android:layout_height="@dimen/main_menu_icon_size"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitStart"
                android:src="@drawable/ic_icon_document" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_code"
                android:textAlignment="center"
                android:textSize="@dimen/main_menu_text_size" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>